String.format() to formatted()